# Carcajou

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
results/: benchmark.json  table.md  vision_ablation.json  vision_table.md
scripts/: run_benchmark.py  run_vision_ablation.py
src/carcajou/: __init__.py  cli.py  eskf.py  frames.py  mechanization.py  pipeline.py  sensors.py
src/carcajou/benchmark/: __init__.py  metrics.py
src/carcajou/datasets/: __init__.py  kitti.py  synthetic.py
src/carcajou/vision/: __init__.py  camera.py  frontend.py  segmentation.py  world.py
tests/: test_core.py  test_pipeline.py  test_vision.py
