[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carcajou"
version = "0.1.0"
description = "GNSS-denied vehicle navigation: strapdown INS, error-state Kalman filtering, and an outage drift benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Primel J" }]
keywords = ["gnss", "ins", "kalman-filter", "sensor-fusion", "navigation", "autonomous-vehicles"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
vision = ["onnxruntime>=1.17", "opencv-python-headless>=4.9"]
dev = ["pytest>=7.4", "pytest-cov", "ruff>=0.4", "matplotlib>=3.7"]

[project.scripts]
carcajou-bench = "carcajou.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E741", "B008"]
